# Realtime_API-Jcdecaux_Pipeline

./: .gitignore  Dockerfile  README.md  config.py  consumer.py  create_es_index.py  docker-compose.yml  logger.py  producer.py  pyproject.toml  requirements.txt
spark-checkpoint/: .metadata.crc  metadata
spark-checkpoint/offsets/: .0.crc  .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .18.crc  .19.crc  .2.crc  .20.crc  .21.crc  .22.crc  .23.crc  .24.crc  .25.crc  .26.crc  .27.crc  .28.crc  .29.crc  .3.crc  .30.crc  .31.crc  .32.crc  .33.crc  .34.crc  .35.crc  .36.crc  .37.crc  .38.crc  .39.crc  .4.crc  .40.crc  .41.crc  .42.crc  .43.crc  .44.crc  (+92 more)
spark-checkpoint/sinks/elasticsearch/: .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .18.crc  .19.compact.crc  .2.crc  .20.crc  .21.crc  .22.crc  .23.crc  .24.crc  .25.crc  .26.crc  .27.crc  .28.crc  .29.compact.crc  .3.crc  .30.crc  .31.crc  .32.crc  .33.crc  .34.crc  .35.crc  .36.crc  .37.crc  .38.crc  .39.compact.crc  .4.crc  .40.crc  .41.crc  .42.crc  .43.crc  .44.crc  .45.crc  (+88 more)
spark-checkpoint/sources/0/: .0.crc  0
utils/: elasticsearch_utils.py  kafka_utils.py
